--- a/style.css
+++ b/style.css
@@ -6,32 +6,36 @@
 #container{
     border: 1px solid black;
     width: 100%;
-    height: 400px;
+    height: 700px;
+    background-color: aqua;
 }
 
 #info{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 30%;
     margin: auto;
     height: 40px;
-    margin-top: 60px;
+    margin-top: 200px;
     text-align: center;
     padding-top: 20px;
+    background-color: rgb(144, 173, 144);
 }
 
 #row{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     width: 30%;
     margin: auto;
     justify-content: space-evenly;
+    background-color: rgb(231, 226, 236);
 }
 
 #content{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 30%;
     margin: auto;
     display: flex;
     justify-content: space-evenly;
+    background-color: rgb(230, 100, 100);
 }
 
